--- a/app/views/alumno/alumno_cursadas.html
+++ b/app/views/alumno/alumno_cursadas.html
@@ -52,7 +52,12 @@
                 <td>{{cursada.comision.cuatrimestre}}</td>
                 <td>{{cursada.comision.nombreMateria}}</td>
                 <td>{{cursada.estado}}</td>
-                <td><a title="Ver Examenes" href="#/alumno-examenes-listar/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
+                <td>
+                  <a title="Ver Examenes" href="#/alumno-examenes-listar/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a>
+                  <a title="Ver archivos" href="#/alumno-archivo-listar/{{cursada.comision.idMateria}}"><i class="listar-iconos material-icons">archive</i></a>
+
+                </td>
+
               </tr>
             </tbody>
           </table>
