--- a/app/views/alumno_agregar.html
+++ b/app/views/alumno_agregar.html
@@ -20,47 +20,45 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col s2">
                     <input class="elementos" id="dni" name="dni" type="number" min="1" class="" ng-model="alumno.dni" ng-required="true">
                     <label class="active" for="dni">DNI</label>
                     <p class="advertencia" ng-show="formAlumno.dni.$error.required && !formAlumno.dni.$pristine" class="help-block">El DNI no puede ser vacío</p>
                     <p class="advertencia" ng-show="formAlumno.dni.$invalid && !formAlumno.dni.$pristine" class="help-block">El DNI debe ser numérico</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col s5">
                     <input class="elementos" id="email" name="email" type="email" class="" ng-model="alumno.email" ng-required="true">
                     <label class="active" for="email">Email</label>
                     <p class="advertencia" ng-show="formAlumno.email.$error.required && !formAlumno.email.$pristine" class="help-block">El email no puede ser vacío</p>
                     <p class="advertencia" ng-show="formAlumno.email.$invalid && !formAlumno.email.$pristine" class="help-block">Ingrese un email correcto</p>
+                </div>       
+            
+                <div class="input-field col s3">
+                    <input class="elementos" id="telefono" name="telefono"  min="1111111111111"  max="9999999999999"   type="number" class="" ng-model="alumno.telefono"> <!-- No required -->
+                    <label class="active" for="icon_telephone">Teléfono</label>
+                    <!-- <p class="advertencia" ng-show="formAlumno.telefono.$error.required && !formAlumno.telefono.$pristine" class="help-block">El teléfono no puede ser vacío</p> -->
+                    <p class="advertencia" ng-show="formAlumno.telefono.$invalid && !formAlumno.telefono.$pristine" class="help-block">El teléfono debe ser numérico</p>
+                    <p class="advertencia" ng-show="validarTelefono(formAlumno.telefono.$viewValue) && !formExamen.telefono.$pristine" class="help-block">Telefono inválido. Formato: XX X XXX XXX-XXXX sin espacios ni guiones. Ej 5493442348688</p>
                 </div>
             </div>
-            <div class="row">
-                    <div class="input-field col s6">
-                      <input class="elementos" id="telefono" name="telefono" min="1" type="number" class="" ng-model="alumno.telefono"> <!-- No required -->
-                      <label class="active" for="icon_telephone">Teléfono</label>
-                      <!-- <p class="advertencia" ng-show="formAlumno.telefono.$error.required && !formAlumno.telefono.$pristine" class="help-block">El teléfono no puede ser vacío</p> -->
-                      <p class="advertencia" ng-show="formAlumno.telefono.$invalid && !formAlumno.telefono.$pristine" class="help-block">El teléfono debe ser numérico</p>
-                    </div>
-                  </div>
-            <div class="row">
-                <div class="input-field col s12">
+            <div class="row"></div>
+                <div class="input-field col s2">
                     <input class="elementos" id="anioIngreso" name="anioIngreso" min="1" type="number" class="" ng-model="alumno.anioIngreso" ng-required="true">
                     <label class="active" for="anioIngreso">Año de ingreso</label>
                     <p class="advertencia" ng-show="formAlumno.anioIngreso.$error.required && !formAlumno.anioIngreso.$pristine" class="help-block">El año de ingreso no puede ser vacío</p>
                     <p class="advertencia" ng-show="formAlumno.anioIngreso.$invalid && !formAlumno.anioIngreso.$pristine" class="help-block">El año de ingreso debe ser numérico</p>
                 </div>
-            </div>
-            <div class="input-field col s12 selects">
-                <select id="carrera" name="carrera" ng-model="alumno.carrera" ng-required="true">
-                    <option value="" disabled selected>Seleccione una carrera:</option>
-                    <option value="ISI">Ingeniería en Sistemas de Información</option>
-                    <option value="CIVIL">Ingeniería Civil</option>
-                    <option value="ELECTRO">Ingeniería Electromecánica</option>
-                    <option value="LOI">Licenciatura en Organización Industrial</option>
-                    <option value="ING">Ingresante</option>                    
-                </select>
-                <p class="advertencia" ng-show="formAlumno.carrera.$error.required && !formAlumno.carrera.$pristine" class="help-block">Debe seleccionar una carrera</p>
+                <div class="input-field col s6 selects">
+                    <select id="carrera" name="carrera" ng-model="alumno.carrera" ng-required="true">
+                        <option value="" disabled selected>Seleccione una carrera:</option>
+                        <option value="ISI">Ingeniería en Sistemas de Información</option>
+                        <option value="CIVIL">Ingeniería Civil</option>
+                        <option value="ELECTRO">Ingeniería Electromecánica</option>
+                        <option value="LOI">Licenciatura en Organización Industrial</option>
+                        <option value="ING">Ingresante</option>                    
+                    </select>         
+                    <p class="advertencia" ng-show="formAlumno.carrera.$error.required && !formAlumno.carrera.$pristine" class="help-block">Debe seleccionar una carrera</p>
+                </div>
             </div>
             <div class="input-field col s12 selects">
                     <select id="escuela" name="escuela" ng-model="alumno.escuela" ng-required="true"> <!-- No required -->
@@ -77,6 +75,7 @@
 <style>
     .selects{
         padding: 0 !important;
+
     }
 
     .advertencia{
