--- a/app/views/alumno_ver.html
+++ b/app/views/alumno_ver.html
@@ -10,17 +10,19 @@
     <div class="row">
             <div class="row">
                 <div class="input-field col s6">
-                    <h5>DNI: <strong>{{alumno.username}}</strong></h5>
+                         <h5>DNI: <strong>{{alumno.username}}</strong></h5>
                     <br>
-                    <h5>Carrera: <strong>{{alumno.carrera}}</strong></h5>
+                         <h5>Carrera: <strong>{{alumno.carrera}}</strong></h5>
                     <br>
-                    <h5>Email: <strong>{{alumno.email}}</strong></h5>
+                        <h5>Email: <strong>{{alumno.email}}</strong></h5>
                     <br>
-                    <h5>Teléfono: <strong>{{alumno.phone}}</strong></h5>
+                         <h5>Teléfono: <strong>{{alumno.phone}}</strong></h5>
                     <br>
-                    <h5>Año de ingreso: <strong>{{alumno.anioIngreso}}</strong></h5>
+                        <h5>Ciudad: <strong>{{ciudad.nombre}}</strong>, {{ciudad.pais.nombre}} </h5>
                     <br>
-                    <h5>Escuela: <strong>{{alumno.escuela.nombre}}</strong> - Orientación: <strong>{{alumno.escuela.orientacion}}</strong></h5>
+                         <h5>Año de ingreso: <strong>{{alumno.anioIngreso}}</strong></h5>
+                    <br>
+                         <h5>Escuela: <strong>{{alumno.escuela.nombre}}</strong> - Orientación: <strong>{{alumno.escuela.orientacion}}</strong></h5>
                     <br>
                     <a title="Resetear contraseña" href="javascript:void(0)" ng-click="resetearContrasenia(alumno.id)" class="btn btn-agregar">Resetear contraseña</a>
                 </div>
