detalles de vista y de llamadas a metodos
se corrigio que los metodos se llamen al controlador del usuario que corresponde

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,54 +1,11 @@
-<!-- <nav>
-  <div class="nav-wrapper red lighten-1">
-    <a href="#!" class="brand-logo">
-      <img src="assets/img/logo-utn.png" alt="">
-    </a>
-    <span class="location">
-      <a href="#/" class="breadcrumb">Cajero</a>
-      <a class="breadcrumb" ng-bind="title"></a>
-    </span>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="#/estado-pedidos" class="waves-effect waves-light btn">Pedidos <i class="material-icons right">dashboard</i></a></li>
-      <li><a href="#/estado-mesas" class="waves-effect waves-light btn">Mesas <i class="material-icons right">announcement</i></a></li>
-      <li>
-        <a class="dropdown-button" data-activates="secciones">
-          Opciones de configuración
-          <i class="material-icons right">menu</i>
-        </a>
-      </li>
-      <li>
-        <a class="dropdown-button" data-activates="opciones-usuario">
-          <img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small">
-          Juan Miguel Pérez
-          <i class="material-icons right">arrow_drop_down</i>
-        </a>
-      </li>
-    </ul>
-  </div>
-
-  <ul id="secciones" class="dropdown-content">
-    <li><a href="#/categorias-menu">Categorías del Menú</a></li>
-    <li><a href="#/elementos-menu">Elementos del Menú</a></li>
-    <li><a href="#/categorias-aderezos">Categorías de Aderezos</a></li>
-    <li><a href="#/aderezos">Aderezos</a></li>
-    <li><a href="#/mesas">Mesas</a></li>
-  </ul>
-
-  <ul id="opciones-usuario" class="dropdown-content">
-    <li><a href="#/"><i class="material-icons">settings</i>Configuración</a></li>
-    <li><a href="#/"><i class="material-icons">face</i>Editar perfil</a></li>
-    <li class="divider"></li>
-    <li><a href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/logout');"><i class="material-icons">exit_to_app</i>Cerrar sesión</a></li>
-  </ul>
-</nav>-->
   <nav>
     <div class="nav-wrapper menu">
       <a href="#/" class="brand-logo"><img src="assets/img/logo-utn.png" alt=""></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
       <ul class="right hide-on-med-and-down">
           <li><a href="#/foro-admin" class="">Foro<i class="material-icons right">forum</i></a></li>
-          <li><a class="dropdown-button" data-activates="dropdownTutores">Tutores<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li><a class="dropdown-button" data-activates="dropdownAlumnos">Alumnos<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a href="#/tutores-listar" class="">Tutores<i class="material-icons right">account_box</i></a></li> 
+          <li><a href="#/alumnos-listar" class="">Alumnos<i class="material-icons right">group</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownConfiguracion">Configuración<i class="material-icons right">menu</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownUsuario"><img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small"><i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
@@ -72,12 +29,6 @@
     </div>
   </nav>    
   
-  <ul id="dropdownAlumnos" class="dropdown-content">
-     <li><a href="#/alumnos-listar">Administrar</a></li>
-  </ul>
-  <ul id="dropdownTutores" class="dropdown-content">
-      <li><a href="#/tutores-listar">Administrar</a></li>
-   </ul>
   <ul id="dropdownUsuario" class="dropdown-content">
     <li><a href="#/admin-ver">Perfil</a></li>
     <li class="divider"></li>
