--- a/app/views/headerTutor.html
+++ b/app/views/headerTutor.html
@@ -4,7 +4,7 @@
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
           <ul class="right hide-on-med-and-down">
               <li><a href="#/foro-tutor" class="">Foro<i class="material-icons right">forum</i></a></li>
-              <li><a class="dropdown-button" data-activates="dropdownAlumnos">Alumnos<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a href="#/tutor-alumnos" class="">Alumnos<i class="material-icons right">group</i></a></li>
               <li><a class="dropdown-button" data-activates="dropdownUsuario"><img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small"><i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
@@ -17,10 +17,7 @@
             </ul>
         </div>
       </nav>    
-      
-      <ul id="dropdownAlumnos" class="dropdown-content">
-         <li><a href="#/tutor-alumnos">Administrar</a></li>
-      </ul>
+
       <ul id="dropdownUsuario" class="dropdown-content">
         <li><a href="#/tutor-perfil">Perfil</a></li>
         <li class="divider"></li>
