--- a/app/views/headerAlumno.html
+++ b/app/views/headerAlumno.html
@@ -4,7 +4,7 @@
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
           <ul class="right hide-on-med-and-down">
               <li><a href="#/foro-alumno" class="">Foro<i class="material-icons right">forum</i></a></li>
-              <li><a class="dropdown-button" data-activates="dropdownAlumnos">Alumno<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a href="#/alumno-cursadas-listar" class="">Cursadas<i class="material-icons right">class</i></a></li>
               <!-- <li><a class="dropdown-button" data-activates="dropdownConfiguracion">Configuración<i class="material-icons right">menu</i></a></li> -->
               <li><a class="dropdown-button" data-activates="dropdownUsuario"><img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small"><i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
@@ -20,10 +20,7 @@
             </ul>
         </div>
       </nav>    
-      
-      <ul id="dropdownAlumnos" class="dropdown-content">
-            <li><a href="#/alumno-cursadas-listar">Cursadas</a></li>
-      </ul>
+
       <ul id="dropdownUsuario" class="dropdown-content">
         <li><a href="#/alumno-perfil">Perfil</a></li>
         <li class="divider"></li>
