--- a/app/views/tutor/tutor_alumno_ver.html
+++ b/app/views/tutor/tutor_alumno_ver.html
@@ -1,4 +1,4 @@
-<main class="container" ng-init="obtenerAlumnos(idAlumno)">
+<main class="container" ng-init="obtenerAlumno(idAlumno)">
     <a href="#/tutor-alumnos" class="btn btn-volver">Volver</a>
 
     <h2>Ver <strong>Alumno</strong></h2>
