--- a/app/views/admin_ver.html
+++ b/app/views/admin_ver.html
@@ -1,6 +1,6 @@
 <main class="container" ng-init="obtenerAdministrador(idAdmin)">
     
-    <h2>Perfil</h2>
+    <h2>Ver <strong>Perfil</strong></h2>
     
     <div class="row">
             <div class="row">
