--- a/app/views/alumno/alumno_perfil.html
+++ b/app/views/alumno/alumno_perfil.html
@@ -1,10 +1,10 @@
 <main class="container" ng-init="obtenerAlumno(alumnoLog)">
 
-        <h2><strong>Alumno</strong> <a href="#/alumnos-perfil-editar"><i title="Editar" class="listar-iconos material-icons">edit</i></a></h2>
+        <h2>Ver <strong>Alumno</strong> <a href="#/alumnos-perfil-editar"><i title="Editar" class="listar-iconos material-icons">edit</i></a></h2>
     
         <div class="row">
                 <div class="row">
-                    <div class="input-field col s6">
+                    <div class="input-field col s12">
                         <h5>DNI: <strong>{{alumno.username}}</strong></h5>
                         <br>
                         <h5>Nombre: <strong>{{alumno.first_name}}</strong></h5>
