--- a/app/views/admin_ver.html
+++ b/app/views/admin_ver.html
@@ -1,6 +1,6 @@
 <main class="container" ng-init="obtenerAdministrador(idAdmin)">
     
-    <h2>Ver <strong>Perfil</strong></h2>
+    <h2>Ver <strong>Perfil</strong> <a href="#/admin-perfil-editar"><i title="Editar" class="listar-iconos material-icons">edit</i></a></h2>
     
     <div class="row">
             <div class="row">
